syntax = "proto3";

enum PasswordProblems {
  NONE = 0;
  TOO_SHORT = 1;
  NO_UPPERCASE = 2;
  NO_LOWERCASE = 3;
  NO_NUMBER = 4;
  NO_SYMBOL = 5;
}

enum PasswordStrength {
  WEAK = 0;
  MEDIUM = 1;
  STRONG = 2;
}

message RegisterUserInfo {
  sint64 userId = 1;
  bool isEmailValid = 2;
  bool isLoginValid = 3;
  bool isNameValid = 4;
  bool isPasswordValid = 5;
  PasswordStrength PasswordStrength = 6;
  repeated PasswordProblems PasswordProblems = 7;
}

message UserRegistrationResponse {
  string message = 1;
  bool success = 2;
  RegisterUserInfo details = 3;
}    

message UserRegistrationRequest {
  string name = 1;
  string password = 2;
  string email = 3;
  string login = 4;
}